--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -53,6 +53,21 @@ h1, h3{
   background-color: rgba(22, 79, 235, 0.719);
 }
 
+.btn1{
+  width: 45%;
+  padding: .5rem;
+  display: inline-block;
+  border: none;
+  outline: none;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  border-radius: 3px;
+  font-size: 1rem;
+  background-color: rgba(22, 79, 235, 0.719);
+}
+
+
+
 .table {
   border-collapse: collapse;
   width: 100%;
@@ -75,10 +90,7 @@ h1, h3{
   color: white;
 }
 
-.action-form{
-  width: 45%;
-  display: inline-block;
-}
+
 
 
 .success{
